# mpd-bot

./: .gitignore  Cargo.toml  README.md
src/: action.rs  commands.rs  db.rs  main.rs  structs.rs  utils.rs
src/commands/: authorize.rs  cancel.rs  download.rs  mod.rs
src/telegram/: mod.rs  structs.rs
