[package]
name = "mpd-bot"
version = "0.1.0"
authors = ["baspar <me@bastien-laine.io>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10", features = ["json","stream"] }
tokio = { version = "0.2.18", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tokio-util = { version = "0.3.1", features = ["compat"] }
rusqlite = "0.22.0"
futures = "0.3.4"
async-std = { version = "1.5.0", features = ["attributes"] }
